--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -14,7 +14,7 @@ import { Code } from '@/components/ui/code'
   <div className="space-y-4 mt-10 text-xl">
     <p>Simple, typesafe, flexible and customizable stepper library</p>
     <div className='flex items-center gap-4'>
-      <Link className={classForButton({ className: 'bg-gradient-to-r from-gray-12 to-gray-9 !text-gray-1 w-40 !h-12 !text-lg !rounded-full' })} href="/docs/introduction">Get started</Link>
+      <Link className={classForButton({ variant: "secondary", className: 'w-40 !h-12 !text-lg !rounded-full border' })} href="/docs/introduction">Get started</Link>
       <Link className={classForButton({ variant: "secondary", className: 'w-40 !h-12 !text-lg !rounded-full border' })} target="_blank" href="https://github.com/damianricobelli/stepperize">Github</Link>
     </div>
   </div>
