chore: add dialog component and remove unnecessary examples

--- a/docs/pages/docs/examples/basic.mdx
+++ b/docs/pages/docs/examples/basic.mdx
@@ -47,7 +47,7 @@ This is an example of full use of `@stepperize/react`, built with `shadcn/ui` an
       }
 
       return (
-        <div className="flex w-full flex-col gap-4 border rounded-lg p-4">
+        <div className="flex w-full flex-col gap-4 border border-gray-4 rounded-lg p-4">
           <Stepper
             steps={steps}
             orientation={orientation}
