--- a/docs/pages/docs/getting-started/use-stepper.mdx
+++ b/docs/pages/docs/getting-started/use-stepper.mdx
@@ -47,17 +47,20 @@ The `useStepper` hook returns an object with the following properties:
     },
     {
       name: "goToNextStep",
-      typeSimple: "() => void",
+      type: "() => void",
+      typeSimple: "function",
       description: "Allow to go to the next step",
     },
     {
       name: "goToPrevStep",
-      typeSimple: "() => void",
+      type: "() => void",
+      typeSimple: "function",
       description: "Allow to go to the previous step",
     },
     {
       name: "goToStep",
-      typeSimple: "(id: string) => void",
+      type: "(id: string) => void",
+      typeSimple: "function",
       description: "Set the current active step by ID",
     },
     {
@@ -67,7 +70,8 @@ The `useStepper` hook returns an object with the following properties:
     },
     {
       name: "reset",
-      typeSimple: "() => void",
+      type: "() => void",
+      typeSimple: "function",
       description: "Reset the stepper to the first step or initial step",
     },
     {
@@ -83,7 +87,8 @@ The `useStepper` hook returns an object with the following properties:
     },
     {
       name: "getStepById",
-      typeSimple: "(id: string) => Step",
+      type: "(id: string) => Step",
+      typeSimple: "function",
       description: "Get a step by its ID",
     },
     {
