--- a/docs/pages/docs/getting-started/installation.mdx
+++ b/docs/pages/docs/getting-started/installation.mdx
@@ -10,22 +10,22 @@ You can install using [NPM](https://www.npmjs.com/), [Yarn](https://yarnpkg.com/
 
 <Tabs items={['npm', 'yarn', 'pnpm', 'bun']}>
   <Tab>
-  ```bash
+  ```shell
   npm install @stepperize/react
   ```
   </Tab>
   <Tab>
-  ```bash
+  ```shell
   yarn add @stepperize/react
   ```
   </Tab>
   <Tab>
-  ```bash
+  ```shell
   pnpm add @stepperize/react
   ```
   </Tab>
   <Tab>
-  ```bash
+  ```shell
   bun add @stepperize/react
   ```
   </Tab>
