--- a/docs/pages/docs/getting-started/use-stepper.mdx
+++ b/docs/pages/docs/getting-started/use-stepper.mdx
@@ -15,9 +15,23 @@ One of the most interesting properties of the hook is the `when` property that a
 For example:
 
 ```tsx
-const { when } = useStepper();
+import { defineStepper } from "@stepperize/react"
 
-when("first").render(() => <p>This is the first step</p>);
+const { useStepper } = defineStepper(
+  { id: "first" },
+  { id: "second" },
+  { id: "last" },
+)
+
+const MyStepperComponent = () => {
+  const stepper = useStepper()
+
+  return (
+    <p>{
+      stepper.when("last", "Finished!", "Not yet...") // "Finished!" | "Not yet..."
+    }</p>
+  )
+}
 ```
 
 As you can see, you can render a component when the stepper is in a specific step through the parameter that receives the `when` function followed by the `render` method.
@@ -30,11 +44,6 @@ The `useStepper` hook returns an object with the following properties:
 
 <PropsTable
   data={[
-    {
-      name: "steps",
-      typeSimple: "Step[]",
-      description: "The array of steps",
-    },
     {
       name: "isLastStep",
       typeSimple: "boolean",
@@ -75,13 +84,8 @@ The `useStepper` hook returns an object with the following properties:
       description: "Reset the stepper to the first step or initial step",
     },
     {
-      name: "stepsCount",
-      typeSimple: "number",
-      description: "The total number of steps",
-    },
-    {
       name: "when",
-      type: "(id: string) => { render: (fn: (step: StepWithAttr<Step>) => React.ReactNode) => React.ReactNode | null }",
+      type: "(id: string, fn: (step: Step) => React.ReactNode): React.ReactNode",
       typeSimple: "function",
       description: "If you want to render a step, you can use the `when` function. It takes a step ID and returns an object with a `render` method, allowing you to render the step when it matches the given ID.",
     },
@@ -90,16 +94,6 @@ The `useStepper` hook returns an object with the following properties:
       type: "(id: string) => Step",
       typeSimple: "function",
       description: "Get a step by its ID",
-    },
-    {
-      name: "metadata",
-      typeSimple: "Record<string, any>",
-      description: "The metadata of the stepper. It can be used to store data between steps",
-    },
-    {
-      name: "onChangeMetadata",
-      typeSimple: "(metadata: Record<string, any>) => void",
-      description: "Callback to update the metadata",
     },
   ]}
 />
