docs: fix scoped-stepper link in define-stepper.mdx
Closes https://github.com/damianricobelli/stepperize/issues/39

--- a/docs/pages/docs/getting-started/define-stepper.mdx
+++ b/docs/pages/docs/getting-started/define-stepper.mdx
@@ -34,5 +34,5 @@ const { Scoped, useStepper, steps } = defineStepper(
 
 ### Related
 
-- [Scoped documentation](./scoped.mdx)
+- [Scoped documentation](./scoped-stepper.mdx)
 - [useStepper documentation](./use-stepper.mdx)
