--- a/docs/pages/docs/migrating-to-v2.mdx
+++ b/docs/pages/docs/migrating-to-v2.mdx
@@ -1,8 +1,8 @@
 ---
-title: Migrating from v1 to v2
+title: Migrating to v2
 ---
 
-# Migrating from v1 to v2 Guide
+# Migrating to v2 Guide
 
 Stepperize v2 is a complete rewrite of the original Stepperize library. It comes with a few breaking changes and new features.
 
