--- a/docs/pages/docs/getting-started/use-stepper.mdx
+++ b/docs/pages/docs/getting-started/use-stepper.mdx
@@ -133,7 +133,7 @@ The `useStepper` hook returns an object with the following properties:
     },
     {
       name: "current",
-      type: "Step",
+      type: "Step & { index: number }",
       typeSimple: "object",
       description: "The current active step",
     },
