Fix stepper.when usage in use-stepper.mdx

--- a/docs/pages/docs/getting-started/use-stepper.mdx
+++ b/docs/pages/docs/getting-started/use-stepper.mdx
@@ -71,7 +71,7 @@ const MyStepperComponent = () => {
         <p>This is the {step.title} step.</p>
       ))}
 
-      <p>{stepper.when("last", "Finished!", "Not yet...")}</p> // "Finished!" | "Not yet..."
+      <p>{stepper.when("last", () => "Finished!", () => "Not yet...")}</p> // "Finished!" | "Not yet..."
     </>
   )
 }
