docs: add missing step in our-first-stepper section

--- a/docs/pages/docs/getting-started/our-first-stepper.mdx
+++ b/docs/pages/docs/getting-started/our-first-stepper.mdx
@@ -38,6 +38,7 @@ import { defineStepper } from "@stepperize/react";
 const { useStepper } = defineStepper(
   { id: "first" },
   { id: "second" },
+  { id: "third" },
   { id: "last" }
 );
 
